--- a/Sketches/SmartLampBluetoothTest/res/layout/client.xml
+++ b/Sketches/SmartLampBluetoothTest/res/layout/client.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -32,7 +32,7 @@
                     android:id="@+id/edit_servo1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="5" >
+                    android:ems="7" >
 
                     <requestFocus />
                 </EditText>
@@ -41,8 +41,14 @@
                     android:id="@+id/btn_servo1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send" />
+                    android:text="Send command" />
             </LinearLayout>
+
+            <SeekBar
+                android:id="@+id/servo1_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="9" />
         </LinearLayout>
 
         <LinearLayout
@@ -68,22 +74,28 @@
                     android:id="@+id/edit_servo2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="5" >
-
-                    <requestFocus />
+                    android:ems="7" >
                 </EditText>
 
                 <Button
                     android:id="@+id/btn_servo2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send" />
+                    android:text="Send command" />
             </LinearLayout>
+
+            <SeekBar
+                android:id="@+id/servo2_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="9" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="#fccece"
             android:orientation="vertical" >
 
             <TextView
@@ -104,22 +116,21 @@
                     android:id="@+id/edit_red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="5" >
-
-                    <requestFocus />
+                    android:ems="7" >
                 </EditText>
 
                 <Button
                     android:id="@+id/btn_red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send" />
+                    android:text="Send command" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#d8ffd4"
             android:orientation="vertical" >
 
             <TextView
@@ -140,22 +151,21 @@
                     android:id="@+id/edit_green"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="5" >
-
-                    <requestFocus />
+                    android:ems="7" >
                 </EditText>
 
                 <Button
                     android:id="@+id/btn_green"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send" />
+                    android:text="Send command" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#d4eaff"
             android:orientation="vertical" >
 
             <TextView
@@ -176,25 +186,25 @@
                     android:id="@+id/edit_blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="5" >
-
-                    <requestFocus />
+                    android:ems="7" >
                 </EditText>
 
                 <Button
                     android:id="@+id/btn_blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send" />
+                    android:layout_gravity="center_horizontal"
+                    android:text="Send command" />
             </LinearLayout>
         </LinearLayout>
 
-        <SeekBar
-            android:layout_marginTop="10dp"
-            android:id="@+id/servo_bar"
-            android:max="9"
+        <Button
+            android:id="@+id/btn_intent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="Test Activity" />
     </LinearLayout>
 
 </FrameLayout>
