--- a/SmartLampSampleApp/res/layout/test_activity.xml
+++ b/SmartLampSampleApp/res/layout/test_activity.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".TestActivity" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -41,7 +42,6 @@
                     android:id="@+id/btn_servo1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="7dp"
                     android:text="Send command" />
             </LinearLayout>
 
@@ -82,7 +82,6 @@
                     android:id="@+id/btn_servo2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="7dp"
                     android:text="Send command" />
             </LinearLayout>
 
@@ -124,7 +123,6 @@
                     android:id="@+id/btn_red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="7dp"
                     android:text="Send command" />
             </LinearLayout>
 
@@ -165,7 +163,6 @@
                     android:id="@+id/btn_green"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="7dp"
                     android:text="Send command" />
             </LinearLayout>
 
@@ -181,40 +178,26 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="RGB LED  - BLUE"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
+                <Button
+                    android:id="@+id/btn_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Get Led Status" />
+
                 <EditText
-                    android:id="@+id/edit_blue"
+                    android:id="@+id/edit_state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="7" >
                 </EditText>
-
-                <Button
-                    android:id="@+id/btn_blue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="7dp"
-                    android:text="Send command" />
             </LinearLayout>
-
-            <SeekBar
-                android:id="@+id/seekbar_ledblue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:max="9" />
         </LinearLayout>
     </LinearLayout>
 
