--- a/SmartLampSample/res/layout/fragment_notifications.xml
+++ b/SmartLampSample/res/layout/fragment_notifications.xml
@@ -14,10 +14,20 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:scaleType="fitXY"
         android:src="@drawable/lamp1" />
+
+    <LinearLayout
+        android:id="@+id/notifications_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:orientation="vertical" >
+    </LinearLayout>
 
 </RelativeLayout>
