--- a/SmartLampSample/res/layout/fragment_motion_control.xml
+++ b/SmartLampSample/res/layout/fragment_motion_control.xml
@@ -27,8 +27,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/lamp_motion"
+            android:layout_marginBottom="56dp"
             android:orientation="vertical" >
 
             <LinearLayout
@@ -43,14 +44,16 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="10dp"
-                    android:text="lamp rotate by Y (0)" />
+                    android:text="lamp rotate by Y (0)"
+                    android:textColor="#a8a1a1" />
 
                 <SeekBar
                     android:id="@+id/seekBar_part0"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:max="360" />
+                    android:max="180"
+                    android:progress="90" />
             </LinearLayout>
 
             <LinearLayout
@@ -64,27 +67,29 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="10dp"
-                    android:text="head rotate by X (0)" />
+                    android:text="head rotate by X (0)"
+                    android:textColor="#a8a1a1" />
 
                 <SeekBar
                     android:id="@+id/seekBar_part4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:max="360" />
+                    android:max="180"
+                    android:progress="90" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 
-    <it.sephiroth.android.library.widget.HorizontalVariableListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_gravity="bottom"
-        android:background="#222222"
-        android:gravity="bottom|center_vertical"
-        android:paddingBottom="0dp"
-        android:paddingTop="0dp" >
-    </it.sephiroth.android.library.widget.HorizontalVariableListView>
+    <!-- <it.sephiroth.android.library.widget.HorizontalVariableListView -->
+    <!-- android:id="@+id/list" -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="150dp" -->
+    <!-- android:layout_gravity="bottom" -->
+    <!-- android:background="#222222" -->
+    <!-- android:gravity="bottom|center_vertical" -->
+    <!-- android:paddingBottom="0dp" -->
+    <!-- android:paddingTop="0dp" > -->
+    <!-- </it.sephiroth.android.library.widget.HorizontalVariableListView> -->
 
 </FrameLayout>
