--- a/SmartLampSample/res/menu/main.xml
+++ b/SmartLampSample/res/menu/main.xml
@@ -5,10 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    <item
-        android:id="@+id/menu_save"
-        android:icon="@drawable/save_p"
-        android:showAsAction="ifRoom|withText"
-        android:title="save"/>
+    <!-- <item -->
+    <!-- android:id="@+id/menu_save" -->
+    <!-- android:icon="@drawable/save_p" -->
+    <!-- android:showAsAction="ifRoom|withText" -->
+    <!-- android:title="save"/> -->
+
 
 </menu>
