--- a/SmartLampSample/res/layout/activity_intro.xml
+++ b/SmartLampSample/res/layout/activity_intro.xml
@@ -4,20 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <VideoView
+        android:id="@+id/video_intro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
+
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/image_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/lamp_start" />
-
-    <ImageView
-        android:id="@+id/image_frame_animation"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
 
     <ImageButton
         android:id="@+id/ImageButton_paly"
