--- a/SmartLampSample/res/layout/activity_navigate.xml
+++ b/SmartLampSample/res/layout/activity_navigate.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="start"
         android:background="#111"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+        android:divider="@drawable/header_line"
+        android:dividerHeight="3dp" />
 
 </android.support.v4.widget.DrawerLayout>
