--- a/SmartLampSample/res/layout/activity_intro.xml
+++ b/SmartLampSample/res/layout/activity_intro.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout_intro"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#000000" >
 
     <VideoView
         android:id="@+id/video_intro"
@@ -17,7 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/lamp_start" />
+        android:src="@drawable/lamp_start"
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/ImageButton_paly"
@@ -27,6 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
         android:background="@null"
-        android:src="@drawable/play_over_video" />
+        android:src="@drawable/play_over_video"
+        android:visibility="invisible" />
 
 </RelativeLayout>
