--- a/SmartLampSample/res/layout/activity_intro.xml
+++ b/SmartLampSample/res/layout/activity_intro.xml
@@ -1,33 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout_intro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000" >
+                android:id="@+id/relativeLayout_intro"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#000000">
 
-    <VideoView
-        android:id="@+id/video_intro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+  <VideoView
+      android:id="@+id/video_intro"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"/>
 
-    <ImageView
-        android:id="@+id/image_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/lamp_start" />
+  <ImageView
+      android:id="@+id/image_start"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentTop="true"
+      android:src="@drawable/lamp_start"/>
 
-    <ImageButton
-        android:id="@+id/ImageButton_paly"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
-        android:background="@null"
-        android:src="@drawable/play_over_video" />
+  <ImageButton
+      android:id="@+id/ImageButton_paly"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginBottom="32dp"
+      android:background="@null"
+      android:src="@drawable/play_over_video"/>
 
 </RelativeLayout>
