--- a/SmartLampSample/res/layout/view1.xml
+++ b/SmartLampSample/res/layout/view1.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:clickable="true"
