--- a/SmartLampSample/res/menu/main.xml
+++ b/SmartLampSample/res/menu/main.xml
@@ -1,15 +1,22 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-    <!-- <item -->
-    <!-- android:id="@+id/menu_save" -->
-    <!-- android:icon="@drawable/save_p" -->
-    <!-- android:showAsAction="ifRoom|withText" -->
-    <!-- android:title="save"/> -->
+  <item
+      android:id="@+id/action_settings"
+      android:orderInCategory="100"
+      android:showAsAction="never"
+      android:title="@string/action_settings"/>
+
+  <item
+      android:id="@+id/menu_save"
+      android:icon="@drawable/save_p"
+      android:showAsAction="ifRoom|withText"
+      android:title="save"/>
+
+  <item
+      android:id="@+id/play"
+      android:icon="@android:drawable/ic_media_play"
+      android:showAsAction="ifRoom|withText"
+      android:title="play"/>
 
 
 </menu>
