--- a/SmartLampSample/res/menu/main.xml
+++ b/SmartLampSample/res/menu/main.xml
@@ -8,13 +8,13 @@
 
   <item
       android:id="@+id/menu_save"
-      android:icon="@drawable/save_p"
+      android:icon="@drawable/content_save"
       android:showAsAction="ifRoom|withText"
       android:title="save"/>
 
   <item
       android:id="@+id/play"
-      android:icon="@android:drawable/ic_media_play"
+      android:icon="@drawable/av_play"
       android:showAsAction="ifRoom|withText"
       android:title="play"/>
 
